# cs2-internal

./: BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CMakeLists.txt  DEBUG_CHECKLIST.md  INJECTION_NOTES.md  OFFSETS_IMPLEMENTED.md  README.md  TROUBLESHOOTING.md  build.rar  dllmain.cpp  imgui.rar
features/: aimbot.cpp  aimbot.h  config.cpp  config.h  esp.cpp  esp.h  triggerbot.cpp  triggerbot.h
hooks/: present.cpp  present.h
sdk/: entity.h  memory.cpp  memory.h  offsets.h  structs.h
utils/: texture_loader.cpp  texture_loader.h
